--- a/views/results.ejs
+++ b/views/results.ejs
@@ -67,6 +67,7 @@
         <th>Inputs</th>
         <th>Mode</th>
         <th>Result</th>
+        <th>Action</th>
       </tr>
       <% data.forEach((entry, index) => { %>
         <tr>
@@ -77,7 +78,7 @@
           <td>
             <form action="/delete-index/<%= index %>" method="post">
               <input type="hidden" name="_method" value="DELETE">
-              <button type="submit">Delete <%= index + 1 %></button>
+              <button type="submit">&#128465;</button>
           </form>
           </td>
         </tr>
