--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,6 +76,7 @@
     }
   </style>
 </head>
+<%-include('./partials/header.ejs')%>
 <form action="/" method="post">
   <div>
     <label for="inputs">Input (comma-separated):</label>
